[metadata]
# replace with your username:
name = agfweboscalhelper-lucasnegrao
version = 0.0.1
author = Lucas Negrao
author_email = lucas@antiglitch.foundation
description = Calibration Helper for webOS Televisions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lucasnegrao/agf.webOSCalibrationHelper
project_urls =
    Bug Tracker = https://github.com/lucasnegrao/agf.webOSCalibrationHelper/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent

[options]
package_dir =
    = agfweboscalhelper
packages = find:
python_requires = >=3.6

[options.packages.find]
where = agfweboscalhelper